.legacy/infra/cdk/cdk.out/latex-dev-network.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/Resource"
   }
  },
  "VpcpublicSubnet1Subnet2BB74ED7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet1/Subnet"
   }
  },
  "VpcpublicSubnet1RouteTable15C15F8E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet1/RouteTable"
   }
  },
  "VpcpublicSubnet1RouteTableAssociation4E83B6E4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet1DefaultRouteB88F9E93": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet1RouteTable15C15F8E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet1/DefaultRoute"
   }
  },
  "VpcpublicSubnet1EIP411541E6": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet1/EIP"
   }
  },
  "VpcpublicSubnet1NATGatewayA036E8A6": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcpublicSubnet1EIP411541E6",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcpublicSubnet1DefaultRouteB88F9E93",
    "VpcpublicSubnet1RouteTableAssociation4E83B6E4"
   ],
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet1/NATGateway"
   }
  },
  "VpcpublicSubnet2SubnetE34B022A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet2/Subnet"
   }
  },
  "VpcpublicSubnet2RouteTableC5A6DF77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet2/RouteTable"
   }
  },
  "VpcpublicSubnet2RouteTableAssociationCCE257FF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    },
    "SubnetId": {
     "Ref": "VpcpublicSubnet2SubnetE34B022A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "VpcpublicSubnet2DefaultRoute732F0BEB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcpublicSubnet2RouteTableC5A6DF77"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/publicSubnet2/DefaultRoute"
   }
  },
  "VpcprivateegressSubnet1Subnet830BC88F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-egress"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-egressSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet1/Subnet"
   }
  },
  "VpcprivateegressSubnet1RouteTable53552907": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-egressSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet1/RouteTable"
   }
  },
  "VpcprivateegressSubnet1RouteTableAssociationBC4FB59B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet1RouteTable53552907"
    },
    "SubnetId": {
     "Ref": "VpcprivateegressSubnet1Subnet830BC88F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet1/RouteTableAssociation"
   }
  },
  "VpcprivateegressSubnet1DefaultRoute8024DE89": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet1RouteTable53552907"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet1/DefaultRoute"
   }
  },
  "VpcprivateegressSubnet2SubnetEB0EA9CB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-egress"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-egressSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet2/Subnet"
   }
  },
  "VpcprivateegressSubnet2RouteTableD35AFE98": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-egressSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet2/RouteTable"
   }
  },
  "VpcprivateegressSubnet2RouteTableAssociation947897EE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet2RouteTableD35AFE98"
    },
    "SubnetId": {
     "Ref": "VpcprivateegressSubnet2SubnetEB0EA9CB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet2/RouteTableAssociation"
   }
  },
  "VpcprivateegressSubnet2DefaultRouteC804F6D0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcpublicSubnet1NATGatewayA036E8A6"
    },
    "RouteTableId": {
     "Ref": "VpcprivateegressSubnet2RouteTableD35AFE98"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-egressSubnet2/DefaultRoute"
   }
  },
  "VpcprivateisolatedSubnet1Subnet24CE21A9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-isolatedSubnet1/Subnet"
   }
  },
  "VpcprivateisolatedSubnet1RouteTableE4679C7E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-isolatedSubnet1/RouteTable"
   }
  },
  "VpcprivateisolatedSubnet1RouteTableAssociation6DF2F129": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateisolatedSubnet1RouteTableE4679C7E"
    },
    "SubnetId": {
     "Ref": "VpcprivateisolatedSubnet1Subnet24CE21A9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-isolatedSubnet1/RouteTableAssociation"
   }
  },
  "VpcprivateisolatedSubnet2Subnet14FC6BC3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-isolatedSubnet2/Subnet"
   }
  },
  "VpcprivateisolatedSubnet2RouteTableBE55F435": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-network/Vpc/private-isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-isolatedSubnet2/RouteTable"
   }
  },
  "VpcprivateisolatedSubnet2RouteTableAssociation32540CC7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprivateisolatedSubnet2RouteTableBE55F435"
    },
    "SubnetId": {
     "Ref": "VpcprivateisolatedSubnet2Subnet14FC6BC3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/private-isolatedSubnet2/RouteTableAssociation"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "latex-dev-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Vpc/VPCGW"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ALB security group",
    "GroupName": "latex-dev-alb-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/AlbSecurityGroup/Resource"
   }
  },
  "AppSecurityGroupC396D536": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ECS app task security group",
    "GroupName": "latex-dev-app-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/AppSecurityGroup/Resource"
   }
  },
  "AppSecurityGroupfromlatexdevnetworkAlbSecurityGroupAC298D3E3000FF5EA317": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from latexdevnetworkAlbSecurityGroupAC298D3E:3000",
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "AppSecurityGroupC396D536",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 3000
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/AppSecurityGroup/from latexdevnetworkAlbSecurityGroupAC298D3E:3000"
   }
  },
  "ClusterEB0386A7": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "latex-dev-cluster",
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/Cluster/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32OQWvCQBCFf4v3zdRuPfQqoUguEpLiVSbj2K7GXdmZNUjIf5eomJun983HY3gW7Nc3zGfYSUa7Y9a6BvpakY4GO9n2TBb6zZlMvvebMjdlalpHdWo86+gmqkJS/sWm5clPbikSyKG64F/lEX6Kcow16gqVO7yaMroLKk+PC68cPb8KjyXPa6mK9H9ir6ZmStHpdRVDOt83vBWF/4ssMhgmgT5vkyjHsfXEYTAVS0iReDA+7BgO8nGxC/i0MJ8dxLksJq/uxFA98gYaRYpgTAEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "latex-dev-network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6": {
   "Value": {
    "Fn::GetAtt": [
     "AppSecurityGroupC396D536",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputFnGetAttAppSecurityGroupC396D536GroupId4ECD26A6"
   }
  },
  "ExportsOutputRefVpcprivateisolatedSubnet1Subnet24CE21A9CBBC011F": {
   "Value": {
    "Ref": "VpcprivateisolatedSubnet1Subnet24CE21A9"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefVpcprivateisolatedSubnet1Subnet24CE21A9CBBC011F"
   }
  },
  "ExportsOutputRefVpcprivateisolatedSubnet2Subnet14FC6BC360484DFA": {
   "Value": {
    "Ref": "VpcprivateisolatedSubnet2Subnet14FC6BC3"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefVpcprivateisolatedSubnet2Subnet14FC6BC360484DFA"
   }
  },
  "ExportsOutputRefClusterEB0386A796A0E3FE": {
   "Value": {
    "Ref": "ClusterEB0386A7"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefClusterEB0386A796A0E3FE"
   }
  },
  "ExportsOutputRefVpcprivateegressSubnet1Subnet830BC88F45116193": {
   "Value": {
    "Ref": "VpcprivateegressSubnet1Subnet830BC88F"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefVpcprivateegressSubnet1Subnet830BC88F45116193"
   }
  },
  "ExportsOutputRefVpcprivateegressSubnet2SubnetEB0EA9CBFD91A0CD": {
   "Value": {
    "Ref": "VpcprivateegressSubnet2SubnetEB0EA9CB"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefVpcprivateegressSubnet2SubnetEB0EA9CBFD91A0CD"
   }
  },
  "ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7": {
   "Value": {
    "Fn::GetAtt": [
     "AlbSecurityGroup86A59E99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputFnGetAttAlbSecurityGroup86A59E99GroupIdE3A37BC7"
   }
  },
  "ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC": {
   "Value": {
    "Ref": "VpcpublicSubnet1Subnet2BB74ED7"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefVpcpublicSubnet1Subnet2BB74ED74EB42ADC"
   }
  },
  "ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627": {
   "Value": {
    "Ref": "VpcpublicSubnet2SubnetE34B022A"
   },
   "Export": {
    "Name": "latex-dev-network:ExportsOutputRefVpcpublicSubnet2SubnetE34B022AC8BB6627"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
